--- a/front/package.json
+++ b/front/package.json
@@ -11,48 +11,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.4.0",
-    "@emotion/react": "^11.13.0",
+    "@ant-design/icons": "^5.5.1",
+    "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^5.16.5",
-    "@mui/material": "^5.16.5",
+    "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "@tanstack/react-query": "^5.51.16",
-    "antd": "^5.20.0",
-    "antd-img-crop": "^4.22.0",
-    "axios": "^1.7.2",
-    "formik": "^2.4.6",
-    "gsap": "^3.12.5",
-    "libphonenumber-js": "^1.11.5",
-    "qrcode.react": "^4.0.1",
+    "antd": "^5.21.1",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-color": "^2.19.3",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.2.1",
-    "react-phone-input-2": "^2.15.1",
-    "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.25.1",
-    "sass-fonts": "^3.0.6",
-    "swagger-client": "^3.28.2",
-    "swagger-ui-react": "^5.17.14",
-    "sweetalert2": "^11.12.3",
-    "yup": "^1.4.0"
+    "react-router-dom": "^6.26.2",
+    "sass": "^1.79.3",
+    "swiper": "^10.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.3",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "sass": "^1.77.8",
-    "vite": "^5.3.4",
-    "vite-plugin-svgr": "^4.2.0"
+    "eslint": "^9.9.0",
+    "eslint-plugin-react": "^7.35.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "vite": "^5.4.8"
   }
 }
