--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.1.1",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
